--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,24 @@
 language: android
 dist: trusty
+jdk: oraclejdk8
+
+env:
+    global:
+    - ANDROID_API=28
+    - ANDROID_BUILD_TOOLS=29.0.2
+
 android:
   components:
-  - build-tools-29.0.2
-  - android-28
+  - tools
+  - platform-tools
+  - build-tools-$ANDROID_BUILD_TOOLS
+  - android-$ANDROID_API
+  - extra-google-google_play_services
+  - extra-google-m2repository
+  - extra-android-m2repository
+
+branches:
+    only:
+    - master
+    - alpha
+    - travis
