--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ jdk: oraclejdk8
 
 env:
     global:
-    - ANDROID_API=28
+    - ANDROID_API_LEVEL=28
     - ANDROID_BUILD_TOOLS=29.0.2
 
 android:
@@ -12,7 +12,7 @@ android:
   - tools
   - platform-tools
   - build-tools-$ANDROID_BUILD_TOOLS
-  - android-$ANDROID_API
+  - android-$ANDROID_API_LEVEL
   - extra-google-google_play_services
   - extra-google-m2repository
   - extra-android-m2repository
